[project]
name = "SadTalker"
version = "0.1.0"
description = "SadTalker API"
authors = [
    { name = "Cedro3", email = "cedro3@gmail.com" },
]

[build-system]
requires = [
    "setuptools",
    "wheel",
]
dependencies = [
    "torch==1.12.1+cu113",
    "torchvision==0.13.1+cu113",
    "torchaudio==0.12.1",
]
